// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimeSelector > should render correctly when disabled 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group"
    id="field-1"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field-1-input"
    >
      Start time
    </label>
    <div
      className=""
    >
      <div
        className=""
      >
        <input
          aria-describedby=""
          className="govuk-input govuk-date-input__input govuk-input--width-4"
          defaultValue="three thirty"
          disabled={true}
          id="field-1-input"
          name="field1"
          onChange={[Function]}
          placeholder="N/A"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeSelector > should render correctly with errors 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group"
    id="field-1"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field-1-input"
    >
      Start time
    </label>
    <div
      className="govuk-hint"
      id="field-1-hint"
    >
      Test Hint
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <input
          aria-describedby="field-1-hint"
          className="govuk-input govuk-date-input__input govuk-input--width-4"
          defaultValue="three thirty"
          disabled={false}
          id="field-1-input"
          name="field1"
          onChange={[Function]}
          placeholder="hhmm"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeSelector > should render correctly with inputs 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group"
    id="field-1"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field-1-input"
    >
      Start time
    </label>
    <div
      className=""
    >
      <div
        className=""
      >
        <input
          aria-describedby=""
          className="govuk-input govuk-date-input__input govuk-input--width-4"
          defaultValue="0900"
          disabled={false}
          id="field-1-input"
          name="field1"
          onChange={[Function]}
          placeholder="hhmm"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeSelector > should render correctly with no inputs 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group"
    id="field-1"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field-1-input"
    >
      Start time
    </label>
    <div
      className=""
    >
      <div
        className=""
      >
        <input
          aria-describedby=""
          className="govuk-input govuk-date-input__input govuk-input--width-4"
          defaultValue=""
          disabled={false}
          id="field-1-input"
          name="field1"
          onChange={[Function]}
          placeholder="hhmm"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;
